Basic html set up.

--- a/Survey.html
+++ b/Survey.html
@@ -4,6 +4,17 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="Survey.css" rel="stylesheets" />
-        <title></title>
+        <!--My Survey is a placeholder don't know what to name it yet. Please change future me-->
+        <title>My Survey</title>
     </head>
+    <body>
+        <main id="content">
+            <!--Change later-->
+            <h1 id="title">My Survey</h1>
+
+        </main>
+        <footer>
+            
+        </footer>
+    </body>
 </html>
