feat: added surveyee info section

--- a/Survey.html
+++ b/Survey.html
@@ -11,7 +11,14 @@
         <main id="content">
             <!--Change later-->
             <h1 id="title">My Survey</h1>
-
+            <p id="intro-scription">Hi! This survey is to take an account of the average netizen's use of social media. The goal is to see how much of netizen's time on the internet is actually spent on social media in contrast to other online activities! It will also feature an pop culture quiz at the end just for fun! Please answer truthfully and enjoy!</p>
+            <form id="survey-form">
+                <section>
+                    <label id="name-label" for="name" title="name-box">Full Name<input type="text" id="name" placeholder="John Doe" required /></label>
+                    <label id="email-label" for="email" title="email-box">Email<input type="email" id="email" placeholder="email123@popculture.com" required /></label>
+                    <label id="age-label" for="age" title="age-box">Age<input type="number" id="age" placeholder="13" min="13" max="99" required /></label>
+                </section>
+            </form>
         </main>
         <footer>
             
